--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^1.0.0",
     "ajv": "^6.4.0",
+    "date-fns": "^2.0.0-alpha.7",
     "formik": "^0.11.11",
     "joi": "^13.2.0",
     "joi-validation-strategy": "^0.3.3",
+    "material-ui-pickers": "^1.0.0-rc.10",
+    "moment": "^2.22.2",
     "muicss": "^0.9.39",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
+    "react-datepicker": "^1.5.0",
     "react-day-picker": "^7.1.9",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
