--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@material-ui/core": "^1.3.1",
     "ajv": "^6.4.0",
+    "ajv-keywords": "^3.4.0",
     "date-fns": "^2.0.0-alpha.7",
     "formik": "^0.11.11",
     "joi": "^13.2.0",
     "joi-validation-strategy": "^0.3.3",
+    "material-design-icons": "^3.0.1",
     "material-ui-pickers": "^1.0.0-rc.10",
     "moment": "^2.22.2",
     "muicss": "^0.9.39",
@@ -19,15 +22,22 @@
     "react-day-picker": "^7.1.9",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.8",
     "react-select": "^1.2.1",
     "react-validation": "^3.0.7",
-    "react-validation-mixin": "^5.4.0"
+    "react-validation-mixin": "^5.4.0",
+    "ts-pnp": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
